--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@genkit-ai/google-genai": "^1.27.0",
     "@genkit-ai/googleai": "^1.14.1",
-    "@genkit-ai/next": "^1.14.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -49,12 +49,12 @@
     "geist": "^1.3.1",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
-    "next": "^15.5.9",
-    "next-themes": "^0.3.0",
+    "next": "^15.5.7",
+    "next-themes": "^0.4.3",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "^19.2.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.2.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
@@ -66,8 +66,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/wav": "^1.0.3",
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
