chore: Update Auth, UI, and Build Config

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ next-env.d.ts
 firebase-debug.log
 firestore-debug.log
 desktop/node_modules
+desktop/dist
+desktop/installer
+desktop/win-unpacked
+desktop/.next
+desktop/out
