--- a/.vercelignore
+++ b/.vercelignore
@@ -7,7 +7,8 @@ desktop/
 **/node_modules
 **/.next
 **/dist
-**/installer
+desktop/installer
+desktopapp/installer
 **/win-unpacked
 **/out
 **/build_temp
